# backend-nice

./: .gitignore  CMakeLists.txt  readme.md
examples/example1/: MyTool.hpp  main.cpp
src/: BackendNice.cpp  BackendNice.h  Commands.hpp  InputReader.hpp  Menu.hpp  MenuWindow.hpp  Window.hpp
